# dioxus-storybook

./: Cargo.toml  Justfile  README.md
.github/workflows/: deploy.yml
cadence-story/: Cargo.toml
cadence-story/src/: components.rs  main.rs
dioxus-storybook/: Cargo.toml
dioxus-storybook/src/: main.rs
storybook/: Cargo.toml
storybook-example/: Cargo.toml
storybook-example/assets/: getting-started.md
storybook-example/src/: main.rs
storybook-macro/: Cargo.toml
storybook-macro/src/: lib.rs
storybook/assets/: storybook.css  storybook.scss  welcome.md
storybook/src/: lib.rs  main.rs
storybook/src/model/: mod.rs
storybook/src/ui/: doc_page.rs  mod.rs  preview.rs  props_editor.rs  settings.rs  shared.rs  sidebar.rs  store.rs  story.rs  top_bar.rs
storybook/src/ui/doc_page/: embedded_story.rs  parser.rs
storybook/src/ui/models/: category_tree.rs  doc.rs  mod.rs  selection.rs  viewport.rs
storybook/src/ui/services/: category_builder.rs  decorators.rs  doc_parser.rs  iframe.rs  mod.rs
storybook/src/ui/shared/: button.rs  select.rs  stories.rs  table.rs
storybook/src/ui/sidebar/: category_tree.rs  node.rs  tree.rs
storybook/src/ui/story/: card.rs  header.rs  preview.rs  props_editor.rs  toolbar.rs
storybook/src/ui/view/: doc_page.rs  mod.rs  shared.rs  sidebar.rs  story.rs  top_bar.rs
storybook/src/ui/view/doc_page/: embedded_story.rs
storybook/src/ui/view/shared/: button.rs  input.rs  select.rs  stories.rs  table.rs
storybook/src/ui/view/sidebar/: node.rs  search_input.rs  stories.rs  tree.rs
storybook/src/ui/view/story/: card.rs  docs.rs  header.rs  preview.rs  props_editor.rs  stories.rs  toolbar.rs
storybook/src/ui/viewmodels/: doc_page_vm.rs  embedded_story_vm.rs  mod.rs  sidebar_vm.rs  store.rs  story_card_vm.rs  story_page_vm.rs  story_preview_vm.rs  ui_settings.rs
