[workspace]
resolver = "2"
members = [
    "storybook-macro", "storybook", "storybook-example"]

[workspace.dependencies]
storybook = { path = "storybook" }
storybook-macro = { path = "storybook-macro" }
inventory = "0.3"
dioxus = "0.7.3"
dioxus-sdk = { version = "0.7", features = ["storage", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.82", features = ["Window"] }
