[package]
name = "cadence-story"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
cadence-ui = { workspace = true, features = ["storybook"] }
storybook = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "0.8", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlIFrameElement",
    "Window",
    "DomTokenList",
] }
