[package]
name = "storybook-macro"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Proc macros for the dioxus-storybook component development framework"
license-file = "../LICENSE"
repository = "https://github.com/oknozor/dioxus-storybook"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
keywords = ["dioxus", "storybook", "macro"]
categories = ["gui", "development-tools"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
pulldown-cmark.workspace = true