[package]
name = "storybook"
version = "0.1.0"
edition = "2024"

[features]
## Include the storybook's own UI components in the story browser.
## External crates should leave this off (the default) so that internal
## Atoms / Molecules / Organisms don't leak into their storybook.
default = []
self-stories = []

[dependencies]
storybook-macro.workspace = true
dioxus.workspace = true
serde.workspace = true
serde_json.workspace = true
inventory.workspace = true
web-sys.workspace = true
schemars.workspace = true
lucide-dioxus.workspace = true
