[package]
name = "storybook"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A component development and documentation framework for Dioxus — inspired by Storybook.js"
license = "MIT"
repository = "https://github.com/oknozor/dioxus-storybook"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
keywords = ["dioxus", "storybook", "ui", "components", "documentation"]
categories = ["gui", "development-tools", "wasm"]
readme = "../README.md"

[features]
## Include the storybook's own UI components in the story browser.
## External crates should leave this off (the default) so that internal
## Atoms / Molecules / Organisms don't leak into their storybook.
default = []
self-stories = []

[dependencies]
storybook-macro.workspace = true
dioxus.workspace = true
serde.workspace = true
serde_json.workspace = true
inventory.workspace = true
web-sys.workspace = true
schemars = { version = "1.2.1", features = ["derive"] }
lucide-dioxus.workspace = true
